edited readme file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:oIyOawXaWbOgLiEiLtLKjT5UX9J9d7MUzb87tStS8Uw=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
